@@ -1,3 +1,10 @@
+2018-03-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/regression/collate-results.py,
+	* support/regression/compact-results.py,
+	* support/regression/get_ticks.py: Accept non-UTF-8 regression test
+	  output without throwing an exception under Python 3
+
 2018-03-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
